...
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/info_icon"
            android:contentDescription="@string/info_icon" />

        <EditText
            android:id="@+id/inputPurpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
...
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/logo_money"
            android:contentDescription="@string/euro_icon" />

        <EditText
            android:id="@+id/inputAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
...
            android:inputType="date"
            android:padding="10dp"
            android:textSize="20sp"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/calendar_btn"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/button_right_rounded_green"
            android:contentDescription="@string/calender_icon"
...
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_category"
            android:contentDescription="@string/category_icon" />

        <Spinner
            android:id="@+id/inputCategory"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
...
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_payment"
            android:contentDescription="@string/creditcard_icon" />

        <Spinner
            android:id="@+id/inputMethod"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
...
            android:hint="@string/detail_placeholder_payment"
            android:padding="10dp"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/addBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_corners_green"
        android:text="@string/add_bill"
        android:textColor="@android:color/black"
...
