<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/searchPurpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_border"
                android:hint="@string/detail_placeholder_what"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/searchAmount1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_border"
                android:hint="@string/min_amount"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:visibility="gone"
                android:autofillHints="" />

            <EditText
                android:id="@+id/searchAmount2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_border"
                android:hint="@string/max_amount"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:visibility="gone"
                android:autofillHints="" />

            <TextView
                android:id="@+id/searchDate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_border"
                android:padding="10dp"
                android:text="@string/min_date"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/searchDate2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_border"
                android:padding="10dp"
                android:text="@string/max_date"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/searchCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone"/>

            <Spinner
                android:id="@+id/searchMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/searchSpinner"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:lines="1"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:spinnerMode="dropdown"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_rounded_corners_green"
        android:text="@string/search"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#dadbf0"
            android:padding="4dp"
            android:scrollbars="vertical"/>

    </RelativeLayout>


</LinearLayout>